--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <div class="username">Sai Ajith Local</div>
                     </div>
                     <div id="card-2">
-                        <img id="card-2-img" src="file/add.png" alt="add-account">
+                        <img id="card-2-img" src="File/add.png" alt="add-account">
                         <div id="add-account" class="username">Add Account</div>
                     </div>
                 </div>
